--- a/composer.json
+++ b/composer.json
@@ -1,47 +1,46 @@
 {
-    "name": ":vendor_slug/:package_slug",
-    "description": ":package_description",
+    "name": "concept7/laravel-sendinblue",
+    "description": "Laravel package for sending transactional emails with Sendinblue using Sendinblue SDK V3 and Symfony",
     "keywords": [
-        ":vendor_name",
+        "concept7",
         "laravel",
-        ":package_slug"
+        "laravel-sendinblue"
     ],
-    "homepage": "https://github.com/:vendor_slug/:package_slug",
+    "homepage": "https://github.com/concept7/laravel-sendinblue",
     "license": "MIT",
     "authors": [
         {
-            "name": ":author_name",
-            "email": "author@domain.com",
+            "name": "Jeroen Hulshof",
+            "email": "jeroenhulshof@icloud.com",
             "role": "Developer"
         }
     ],
     "require": {
         "php": "^8.1",
+        "illuminate/contracts": "^9.0",
+        "illuminate/mail": "^9.27",
+        "illuminate/support": "^9.27",
+        "sendinblue/api-v3-sdk": "^8.3",
         "spatie/laravel-package-tools": "^1.9.2",
-        "illuminate/contracts": "^9.0"
+        "symfony/http-client": "^6.1",
+        "symfony/sendinblue-mailer": "^6.1"
     },
     "require-dev": {
         "laravel/pint": "^1.0",
         "nunomaduro/collision": "^6.0",
-        "nunomaduro/larastan": "^2.0.1",
         "orchestra/testbench": "^7.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "phpstan/extension-installer": "^1.1",
-        "phpstan/phpstan-deprecation-rules": "^1.0",
-        "phpstan/phpstan-phpunit": "^1.0",
-        "phpunit/phpunit": "^9.5",
-        "spatie/laravel-ray": "^1.26"
+        "phpunit/phpunit": "^9.5"
     },
     "autoload": {
         "psr-4": {
-            "VendorName\\Skeleton\\": "src",
-            "VendorName\\Skeleton\\Database\\Factories\\": "database/factories"
+            "Concept7\\LaravelSendinblue\\": "src"
         }
     },
     "autoload-dev": {
         "psr-4": {
-            "VendorName\\Skeleton\\Tests\\": "tests"
+            "Concept7\\LaravelSendinblue\\Tests\\": "tests"
         }
     },
     "scripts": {
@@ -51,15 +50,18 @@
         "format": "vendor/bin/pint"
     },
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "pestphp/pest-plugin": true
+        }
     },
     "extra": {
         "laravel": {
             "providers": [
-                "VendorName\\Skeleton\\SkeletonServiceProvider"
+                "Concept7\\LaravelSendinblue\\SendinblueServiceProvider"
             ],
             "aliases": {
-                "Skeleton": "VendorName\\Skeleton\\Facades\\Skeleton"
+                "SendinblueApi": "Concept7\\LaravelSendinblue\\Facades\\SendinblueApi"
             }
         }
     },
