changed homepage in composer.json

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
         "laravel",
         "laravel-sendinblue"
     ],
-    "homepage": "https://github.com/concept7/laravel-sendinblue",
+    "homepage": "https://concept7.nl",
     "license": "MIT",
     "authors": [
         {
