--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         {
             "name": "Jeroen Hulshof",
             "email": "jeroenhulshof@icloud.com",
-            "role": "Developer",
-            "homepage": "https://github.com/Jeroenhulshof"
+            "role": "Developer"
         }
     ],
     "require": {
