--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "concept7/laravel-sendinblue",
+    "name": "dominicv1/laravel-sendinblue",
     "description": "Laravel package for sending transactional emails with Sendinblue using Sendinblue SDK V3 and Symfony",
     "keywords": [
         "concept7",
@@ -17,9 +17,8 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "^9.0",
-        "illuminate/mail": "^9.27",
-        "illuminate/support": "^9.27",
+        "illuminate/contracts": "*",
+        "illuminate/mail": "^10.0",
         "sendinblue/api-v3-sdk": "^8.3",
         "spatie/laravel-package-tools": "^1.9.2",
         "symfony/http-client": "^6.1",
@@ -27,11 +26,11 @@
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "^6.0",
-        "orchestra/testbench": "^7.0",
+        "nunomaduro/collision": "6.1",
+        "orchestra/testbench": "^8.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "phpunit/phpunit": "^9.5"
+        "phpunit/phpunit": "9.6"
     },
     "autoload": {
         "psr-4": {
