--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,9 @@
     ],
     "require": {
         "php": "^8.1",
-        "illuminate/contracts": "*",
+        "illuminate/contracts": "^10.0",
         "illuminate/mail": "^10.0",
+        "illuminate/support": "^10.0",
         "sendinblue/api-v3-sdk": "^8.3",
         "spatie/laravel-package-tools": "^1.9.2",
         "symfony/http-client": "^6.1",
@@ -26,11 +27,11 @@
     },
     "require-dev": {
         "laravel/pint": "^1.0",
-        "nunomaduro/collision": "6.1",
+        "nunomaduro/collision": "^6.1",
         "orchestra/testbench": "^8.0",
         "pestphp/pest": "^1.21",
         "pestphp/pest-plugin-laravel": "^1.1",
-        "phpunit/phpunit": "9.6"
+        "phpunit/phpunit": "^9.6"
     },
     "autoload": {
         "psr-4": {
